# simronangpt

./: pyproject.toml
simronangpt/: main.py
simronangpt/discord/: client.py
simronangpt/openai/: client.py  prompts.py
