[tool.poetry]
name = "simronangpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
openai = "^1.23.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
bot = "simronangpt.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
